--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,4 @@
 <resources>
     <string name="app_name">Airsoft</string>
-    <string name="title_estatisticas">Estatísticas</string>
-    <string name="title_miequipe">Minha Equipe</string>
-    <string name="title_equipes">Equipes</string>
-    <string name="title_jogos">Jogos</string>
+    <string name="title_activity_formulario">Formulario</string>
 </resources>
