--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Airsoft</string>
     <string name="title_activity_formulario">Formulario</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="minha_equipe">Minha Equipe</string>
+    <string name="equipes">Equipes</string>
+    <string name="jogos_marcados">Jogos marcados</string>
 </resources>
